fixed some overflows on the sidebar

--- a/mapa.css
+++ b/mapa.css
@@ -36,9 +36,10 @@ Select{
 }
 
 /* Agrega funcionalidad de cursor sobre el Sidebar. */
-#sidebar li:hover{
+#sidebar li {
     cursor: pointer;
     font-weight: bold;
+    overflow: auto; /* Asegura que el contenido no se desborde */
 }
 
 .hidden {
@@ -54,4 +55,14 @@ Select{
 .leaflet-retina .leaflet-control-layers-toggle {
     background-image: url(assets/interface/worldwide.png);
     background-size: 26px 26px;
+}
+
+#sidebar {
+    width: 150px; /* Establece el ancho de la barra lateral */
+    overflow: auto; /* Asegura que el contenido no se desborde */
+}
+
+#button-container {
+    width: 100%; /* Asegura que el contenedor de botones no sea más ancho que la barra lateral */
+    overflow: auto; /* Asegura que los botones no se desborden */
 }
